# scythe

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  demo.yml  docker.yml  release.yml
demo/: demo.tape  fixture.py
scythe/: __init__.py  cli.py
scythe/banner/: banner.py
scythe/cleaner/: cleaner.py
scythe/detector/: detector.py
scythe/formatter/: formatter.py
scythe/models/: models.py
scythe/scanner/: scanner.py
scythe/trash/: __init__.py  trash.py
scythe/ui/: ui.py
scythe/utils/: utils.py
tests/: test_cleaner.py  test_cli.py  test_detector.py  test_models.py  test_scanner.py  test_trash.py  test_ui.py  test_utils.py
